[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/props.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 96 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[node name="props" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="cooldown" type="Timer" parent="."]

[node name="body" type="StaticBody2D" parent="."]
collision_mask = 8

[node name="col" type="CollisionShape2D" parent="body"]
shape = SubResource( 1 )

[node name="interact-radius" type="Area2D" parent="body"]

[node name="area" type="CollisionShape2D" parent="body/interact-radius"]
z_index = 1
shape = SubResource( 2 )

[node name="area2" type="CollisionShape2D" parent="body/interact-radius"]
z_index = 1
shape = SubResource( 3 )

[node name="detector" type="Area2D" parent="body"]
collision_mask = 8

[node name="area" type="CollisionShape2D" parent="body/detector"]
shape = SubResource( 4 )

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="mouse_entered" from="body" to="." method="_on_body_mouse_entered"]
[connection signal="body_entered" from="body/interact-radius" to="." method="_on_interactradius_body_entered"]
[connection signal="body_exited" from="body/interact-radius" to="." method="_on_interactradius_body_exited"]
[connection signal="body_entered" from="body/detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="body/detector" to="." method="_on_detector_body_exited"]
[connection signal="mouse_entered" from="body/detector" to="." method="_on_detector_mouse_entered"]
